--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "simple-flexbox": "^2.3.1"
   },
   "scripts": {
-    "start": "node App.js",
+    "start": "npm start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
