--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "esrasystemsmain",
   "version": "0.1.0",
-  "main":"App.js",
+  "main":"index.js",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.10",
@@ -19,7 +19,7 @@
     "simple-flexbox": "^2.3.1"
   },
   "scripts": {
-    "start": "npm start",
+    "start": "node index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
