--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "esrasystemsmain",
   "version": "0.1.0",
-  "main":"index.js",
+  "main":"/src/index.js",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.10",
