--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-loader-spinner": "^3.1.14",
     "simple-flexbox": "^2.3.1"
   },
   "scripts": {
